mlir/test/Dialect/Lattice/invalid/missing_weight_file.mlir
// Invalid: lattice artifact modules must declare the weight payload file.
module attributes {
  lattice.ir_version = 0
} {
  func.func @forward() {
    return
  }
}
